trunk/Archive2/1e/6074e48593d524/output
main.cpp:14:8: error: member access into incomplete type 'Foo'
    foo->f();
       ^
main.cpp:10:7: note: forward declaration of 'Foo'
class Foo;
      ^
1 error generated.
